Se agregó el color oscuro al fondo de los inputs

--- a/Formulario/css/login.css
+++ b/Formulario/css/login.css
@@ -113,7 +113,7 @@ label span{
 
 .section-inputs label input {
     width: 81%;
-    background-color: #f3f3f4;
+    background-color: #212121;
     border: none;
     padding: 10px 20px;
     border-radius: 10px;
