--- a/css/estilos.css
+++ b/css/estilos.css
@@ -291,3 +291,99 @@ span.frase::after{
 .listado2 ol li::marker {
     color: orange;
 }
+
+.padre {
+    width: 400px;
+    height: 400px;
+    background-color: blue;
+}
+
+.hijo {
+    width: 50%;
+    height: 50%;
+    background-color: beige;
+}
+
+.padre:hover .hijo {
+    animation: traslacion 3s ease-in-out forwards;
+}
+
+@keyframes traslacion {
+    0%{
+        background-color: beige;
+        transform: translateX(0%);
+    }
+    25%{
+        background-color: red;
+        transform: translateX(100%);
+    }
+    50%{
+        background-color: green;
+        transform: translate(100%,100%);
+    }
+    75%{
+        background-color: cyan;
+        transform: translate(0%,100%);
+    }
+    100%{
+        background-color: purple;
+        transform: translateY(0%);
+    }
+}
+
+.div-tooltip {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center; /*centra los elementos de manera horizontal*/
+    align-items: center; /*Centra los elementos verticalmente*/
+    min-height: 100vh;
+}
+
+.btn-tooltip {
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: green;
+    color: white;
+    border-bottom: 2px solid darkgreen;
+    cursor:pointer;
+    transition: background-color 150ms;
+}
+
+.tooltip {
+    position: absolute;
+    opacity: 0;
+    top: -50px;
+    left: -100%;
+    transform: translateX(25%);
+    color: #ddd;
+    background-color: #333;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: opacity 150ms;
+}
+
+.btn-tooltip:hover {
+    background-color: darkslategray;
+}
+
+.btn-tooltip:hover .tooltip{
+    opacity: 1;
+}
+
+.tooltip::before {
+    content: '';
+    border: solid 10px transparent;
+    border-top-color: #333;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/*.triangulo {
+    border: solid 10px transparent;
+    border-top-color: #333;
+}*/
