--- a/Sass/sass/_componentes.scss
+++ b/Sass/sass/_componentes.scss
@@ -4,7 +4,7 @@
     color: #2b2b2b;
 
     &:hover {
-        background-color: cyan;
+        background-color: pink;
         color: red;
     }
 }
