--- a/Sass/style.css
+++ b/Sass/style.css
@@ -4,7 +4,7 @@
   color: #2b2b2b;
 }
 .btn:hover, .btn-2:hover {
-  background-color: cyan;
+  background-color: pink;
   color: red;
 }
 
@@ -51,4 +51,6 @@ p {
 }
 .listado ul li:hover {
   color: white;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
