--- a/Proyecto-Final/sass/_components.scss
+++ b/Proyecto-Final/sass/_components.scss
@@ -1,5 +1,120 @@
+@mixin btn-base {
+  padding: 0.25rem 1.5rem;
+  border-radius: 0.25rem;
+}
+
+@mixin btn-sm-modify {
+  font-size: 0.75rem;
+  font-weight: bold;
+  padding: 0.45rem 1rem;
+}
+
 $color-main: #0075ff;
+$color-text: #5b616e;
+$footer-color: #f4f8fe;
 
 .btn-main {
-    background-color: $color-main;
+  @include btn-base();
+  background-color: $color-main;
+  color: white;
+  border: none;
+  border: solid 1px $color-main;
+
+  &:hover {
+    background-color: white;
+    color: $color-main;
+  }
+
+  &-s {
+    @extend .btn-main;
+    @include btn-sm-modify();
+  }
+}
+
+.btn-sec {
+  @include btn-base();
+  color: black;
+  background-color: transparent;
+  border: none;
+
+  &:hover {
+    color: #888;
+  }
+
+  &-s {
+    @extend.btn-sec;
+    @include btn-sm-modify();
+  }
+}
+
+.main-menu {
+  margin: 0;
+  padding: 0;
+  li {
+    font-size: 1rem;
+    list-style: none;
+    display: inline;
+    margin-right: 2.6rem;
+    a {
+      color: black;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.icon-sm {
+  margin-top: 1rem;
+  i {
+    color: $color-main;
+    font-size: 1.25rem;
+    padding: 0.4rem 0.6rem;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #01011881;
+  }
+}
+
+.benefit {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 3rem;
+  i {
+    font-size: 4rem;
+    color: $color-main;
+  }
+  .description {
+    .title {
+      font-size: 3srem;
+    }
+    .text {
+      color: $color-text;
+      font-weight: 400;
+    }
+  }
+  .cta {
+    margin-top: 3rem;
+    color: $color-main;
+    font-weight: 400;
+  }
+}
+
+.icondesk {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  i {
+    color: $color-main;
+    font-size: 6rem;
+    padding: 0;
+  }
+  .title {
+    margin-top: -1rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+  }
 }
